Cascading Change Log

unreleased

  Fix for case where one side of a branch multiplexed in a mapper could step on c.t.Tuple values before being
  handed to the next branch.

  Fix for edge case where Cascading jars are stored in Hadoop classpath and deserialization of c.f.Flow fails.

  Fix for bad cast of j.l.Error when caught in map/reduce pipeline stack.

  Fix for bug when selecting positional Fields from positional Fields.

  Fix for case when an c.o.Aggregator#start is called when there are no values to iterate across in current grouping.

1.0.17

  Changed behavior when cleaning temp files that allows shutdown to continue even if an exception is thrown
  during temp file delete.

  Fix bug where c.f.FlowProcess#openTapForRead() included current input file values in iterator.

  Fix for intermediate temp files not being cleaned up on c.f.Flow#stop().

  Fixed bug where NPE is thrown if all hadoop default properties are not available.

1.0.16

  Fixed bug where in some instances o.a.h.m.JobConf hangs when instantiated during co-grouping.

  Fixed bug in c.CascadingTestCase#invokeBuffer where the output collector was not properly being set. Added
  new methods on #invokeBuffer and #invokeAggregator to take a groping c.t.TupleEntry.

1.0.15

  Fixed bug where c.t.Fields did not check for a null field name or position on the ctor.

  Fixed bug in c.u.Util#join() methods where if the first value was empty, the delimiter was not properly applied.

  Fixed issue in c.t.h.FSDigestOutputStream where seek() now must be implemented with modern versions of Hadoop.

1.0.14

  Fixed bug in planner where JGraphT sometimes returns null instead of an empty List.

  Fixed bug in c.o.x.XPathParser that prevented use of multiple xpath expressions.

  Added configuration propety allowing job polling interval to be configured per c.f.Flow via
  Flow#setJobPollingInterval().

  Updated ant build to not hard-code hadoop/lib sub-dir names.

1.0.13
